--- a/VeltiumCharger/data/WebServer/index.html
+++ b/VeltiumCharger/data/WebServer/index.html
@@ -13,7 +13,8 @@
     <input type='submit' class=btn value='Update'>
     <br><br>
     <div id='prg'></div>
-    <br><div id='prgbar'><div id='bar'></div></div><br></form>
+    <br><div id='prgbar'><div id='bar'></div></div><br>
+    </form>
 </body>
 <script>
     function sub(obj){
@@ -48,4 +49,5 @@
             }
         });
     });
+
 </script>
