--- a/VeltiumCharger/data/WebServer/login.html
+++ b/VeltiumCharger/data/WebServer/login.html
@@ -1,30 +1,75 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title>Veltium Smart Chargers</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
-    <form name=loginForm action="/get">
-    <h1>VELTIUM Login</h1>
-    <input name=userid placeholder='User ID'type="text"> 
-    <input name=pwd placeholder=Password type="password"> 
 
-<p>
-    <input type="submit" class=btn value=Login onclick= errormesage(this)>
-</p>
-<p>
-    <span>%F_PWD%</span>
-</p>
-</br></br>
-    </form>
+<html>
+
+<head>
+
+    <title>Veltium Smart Chargers</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="https://www.gstatic.com/firebasejs/4.8.2/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.8.2/firebase-auth.js"></script>
+    <script src="https://cdn.firebase.com/libs/firebaseui/2.5.1/firebaseui.js"></script>
+    <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/2.5.1/firebaseui.css" />
+   
+</head>
+
+<body>
+
+    <!-- The surrounding HTML is left untouched by FirebaseUI.
+         Your app may use that space for branding, controls and other customizations.-->
+         <h1 style="text-align: center;">Veltium Smart Chargers</h1>
+         <div id="firebaseui-auth-container"></div>
+
 </body>
+
+
 <script>
-   function errormesage(element) {
-      var xhr = new XMLHttpRequest();
-      if(element.clicked){ xhr.open("GET", "/get", true); }
-        else { xhr.open("GET", "/", true); }
-        xhr.send();
-    }
+
+
+
+
+
+var fireBase = fireBase || firebase;
+var hasInit = false;
+var config = {
+  apiKey: "AIzaSyCYZpVNUOQvrXvc3qETxCqX4DPfp3Fwe3w",
+  authDomain: "veltiumdev.firebaseapp.com",
+  projectId: "veltiumdev",
+  databaseURL: "https://veltiumdev-default-rtdb.firebaseio.com",
+  storageBucket: "veltiumdev.appspot.com",
+  messagingSenderId: "1020185418136",
+  appId: "1:1020185418136:web:6453b887d5d71329c633ed",
+  measurementId: "G-VN3G1YL6TX"
+  };
+if(!hasInit){
+    firebase.initializeApp(config);
+    hasInit = true;
+}
+
+
+
+// FirebaseUI config.
+var uiConfig = {
+  signInSuccessUrl: 'datos',
+  signInOptions: [
+    // Leave the lines as is for the providers you want to offer your users.
+          //firebase.auth.GoogleAuthProvider.PROVIDER_ID,
+          //firebase.auth.FacebookAuthProvider.PROVIDER_ID,
+          //firebase.auth.TwitterAuthProvider.PROVIDER_ID,
+          //firebase.auth.GithubAuthProvider.PROVIDER_ID,
+          firebase.auth.EmailAuthProvider.PROVIDER_ID,
+          //firebase.auth.PhoneAuthProvider.PROVIDER_ID
+  ],
+  // Terms of service url.
+  tosUrl: 'datos'
+};
+
+// Initialize the FirebaseUI Widget using Firebase.
+var ui = new firebaseui.auth.AuthUI(firebase.auth());
+// The start method will wait until the DOM is loaded.
+ui.start('#firebaseui-auth-container', uiConfig);
 </script>
+</html>
