--- a/VeltiumCharger/data/WebServer/status.html
+++ b/VeltiumCharger/data/WebServer/status.html
@@ -9,7 +9,7 @@
 <div class="header">
   <table>
     <tr>
-      <td><img src="veltium-logo-big.png" width="60px" height="60px"> </td>
+      <td><img src="veltium-logo-big" width="60px" height="60px"> </td>
       <td><h1>Veltium Smart Chargers</h1>
       </td>
     </tr>
